tests/error/func_unknown_ret.gw
// [contains] unknown type in
 function unknwon_type my_function(){}
